--- a/quartier/adamville.html
+++ b/quartier/adamville.html
@@ -22,10 +22,10 @@
                 <div class="carte-outer-container">
                     <div class="carte-container">
                         <img src="../images/adamville.webp" alt="carte d'Adamville'" class="carte-img">
-                        <div class="marker-container" id="marker-container-birhakeim" data-family="birhakeim">
+                        <div class="marker-container" id="marker-container-rue-de-birhakeim" data-family="rue-de-birhakeim">
                             <img src="../images/marker.webp" alt="Marker Rue de Bir-Hakeim" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-juin" data-family="juin">
+                        <div class="marker-container" id="marker-container-place-du-marechal-juin" data-family="place-du-marechal-juin">
                             <img src="../images/marker.webp" alt="Marker Place du Maréchal-Juin" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-rue-edouard-vallerand" data-family="rue-edouard-vallerand">
@@ -37,19 +37,22 @@
                         <div class="marker-container" id="marker-container-avenue-et-place-charles-de-gaulle" data-family="avenue-et-place-charles-de-gaulle">
                             <img src="../images/marker.webp" alt="Marker Avenue et Place Charles-de-Gaulle" class="marker">
                         </div>
+                        <div class="marker-container" id="marker-container-rue-de-metz" data-family="rue-de-metz">
+                            <img src="../images/marker.webp" alt="Marker Rue de Metz" class="marker">
+                        </div>
                     </div>
                     
-                    <div class="famille-info" id="info-birhakeim">
+                    <div class="famille-info" id="info-rue-de-birhakeim">
                         <h3>La rue de Bir-Hakeim</h3>
                         <img src="images/eglise.webp" alt="Rue de Bir-Hakeim" class="famille-img">
                         <p>La rue de Bir-Hakeim</p>
                         <a href="../rues/rue-de-bir-hakeim.html" class="btn-decouvrir">Découvrez la rue de Bir-Hakeim</a>
                     </div>
-                    <div class="famille-info" id="info-juin">
+                    <div class="famille-info" id="info-place-du-marechal-juin">
                         <h3>la Place du Maréchal-Juin</h3>
                         <img src="images/le-parc.webp" alt="Place du Maréchal-Juin" class="famille-img">
                         <p>Découvrez la Place du Maréchal-Juin</p>
-                        <a href="../rues/marechal-juin.html" class="btn-decouvrir">Découvrez la Place du Maréchal-Juin</a>
+                        <a href="../rues/place-du-marechal-juin.html" class="btn-decouvrir">Découvrez la Place du Maréchal-Juin</a>
                     </div>
                     <div class="famille-info" id="info-rue-edouard-vallerand">
                         <h3>La Rue Edouard-Vallerand</h3>
@@ -66,8 +69,14 @@
                     <div class="famille-info" id="info-avenue-et-place-charles-de-gaulle">
                         <h3>l'Avenue et la Place Charles-de-Gaulle</h3>
                         <img src="images/le-parc.webp" alt="Avenue et Place Charles-de-Gaulle" class="famille-img">
-                        <p>Découvrez l'Avenue et la Place Charles-de-Gaulle'</p>
+                        <p>Découvrez l'Avenue et la Place Charles-de-Gaulle</p>
                         <a href="../rues/avenue-et-place-charles-de-gaulle.html" class="btn-decouvrir">Découvrez l'Avenue et la Place Charles-de-Gaulle</a>
+                    </div>
+                    <div class="famille-info" id="info-rue-de-metz">
+                        <h3>la Rue de Metz</h3>
+                        <img src="images/rue-de-metz.webp" alt="la Rue de Metz" class="famille-img">
+                        <p>Découvrez la Rue de Metz</p>
+                        <a href="../rues/rue-de-metz.html" class="btn-decouvrir">Découvrez la Rue de Metz</a>
                     </div>
                 </div>
             </div>
