--- a/quartier/la-pie.html
+++ b/quartier/la-pie.html
@@ -22,18 +22,18 @@
                 <div class="carte-outer-container">
                     <div class="carte-container">
                         <img src="../images/lapie.webp" alt="carte de la Pie" class="carte-img">
-                        <div class="marker-container" id="marker-container-bayon" data-family="bayon">
+                        <div class="marker-container" id="marker-container-rue-bayon" data-family="rue-bayon">
                             <img src="../images/marker.webp" alt="Marker Bayon" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-boulevard-du-general-giraud" data-family="boulevard-du-general-giraud">
                             <img src="../images/marker.webp" alt="Marker Boulevard du Général-Giraud " class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-square-darromanches" data-family="square-darromanches">
-                            <img src="../images/marker.webp" alt="Marker Square d'Arromanches " class="marker">
+                        <div class="marker-container" id="marker-container-square-et-avenue-darromanches" data-family="square-et-avenue-darromanches">
+                            <img src="../images/marker.webp" alt="Marker Square et Avenue d'Arromanches " class="marker">
                         </div>
                     </div>
                     
-                    <div class="famille-info" id="info-bayon">
+                    <div class="famille-info" id="info-rue-bayon">
                         <h3>La rue Bayon</h3>
                         <img src="images/eglise.webp" alt="Rue Bayon" class="famille-img">
                         <p>Découvrez la rue Bayon</p>
@@ -45,11 +45,11 @@
                         <p>Découvrez le Boulevard du Général-Giraud </p>
                         <a href="../rues/boulevard-du-general-giraud.html" class="btn-decouvrir">Découvrez le Boulevard du Général-Giraud </a>
                     </div>
-                    <div class="famille-info" id="info-square-darromanches">
-                        <h3>Le Boulevard du Général-Giraud </h3>
-                        <img src="images/eglise.webp" alt="Square d'Arromanches" class="famille-img">
-                        <p>Découvrez le Square d'Arromanches </p>
-                        <a href="../rues/square-darromanches.html" class="btn-decouvrir">Découvrez le Square d'Arromanches </a>
+                    <div class="famille-info" id="info-square-et-avenue-darromanches">
+                        <h3>Le Square et l'Avenue d'Arromanches </h3>
+                        <img src="images/eglise.webp" alt="Square et Avenue d'Arromanches" class="famille-img">
+                        <p>Découvrez le Square et l'Avenue d'Arromanches </p>
+                        <a href="../rues/square-et-avenue-darromanches.html" class="btn-decouvrir">Découvrez le Square et l'Avenue d'Arromanches </a>
                     </div>
                 </div>
             </div>
