--- a/quartier/la-varenne.html
+++ b/quartier/la-varenne.html
@@ -22,16 +22,19 @@
                 <div class="carte-outer-container">
                     <div class="carte-container">
                         <img src="../images/la-varenne.webp" alt="carte de la Varenne" class="carte-img">
-                        <div class="marker-container" id="marker-container-stalingrad" data-family="stalingrad">
+                        <div class="marker-container" id="marker-container-place-de-stalingrad" data-family="place-de-stalingrad">
                             <img src="../images/marker.webp" alt="Marker Place de Stalingrad" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-place-jean-moulin" data-family="place-jean-moulin">
                             <img src="../images/marker.webp" alt="Marker Place Jean-Moulin" class="marker">
                         </div>
+                        <div class="marker-container" id="marker-container-quai-winston-churchill" data-family="quai-winston-churchill">
+                            <img src="../images/marker.webp" alt="Marker Quai Winston Churchill" class="marker">
+                        </div>
                     </div>
                     
                     
-                    <div class="famille-info" id="info-stalingrad">
+                    <div class="famille-info" id="info-place-de-stalingrad">
                         <h3>Place de Stalingrad</h3>
                         <img src="../images/stalingrad.webp" alt="Place de Stalingrad" class="famille-img">
                         <p>Place de Stalingrad</p>
@@ -42,6 +45,12 @@
                         <img src="../images/" alt="Place Jean-Moulin" class="famille-img">
                         <p>Place Jean-Moulin</p>
                         <a href="../rues/place-jean-moulin.html" class="btn-decouvrir">Découvrez la Place Jean-Moulin</a>
+                    </div>
+                    <div class="famille-info" id="info-quai-winston-churchill">
+                        <h3>Quai Winston Churchill</h3>
+                        <img src="../images/" alt="Quai Winston Churchill" class="famille-img">
+                        <p>Quai Winston Churchill</p>
+                        <a href="../rues/quai-winston-churchill.html" class="btn-decouvrir">Découvrez le Quai Winston Churchill</a>
                     </div>
                 </div>
             </div>
