--- a/quartier/le-parc-saint-maur.html
+++ b/quartier/le-parc-saint-maur.html
@@ -22,10 +22,10 @@
                 <div class="carte-outer-container">
                     <div class="carte-container">
                         <img src="../images/leparc.webp" alt="Carte de Saint-Maur le Parc" class="carte-img">
-                        <div class="marker-container" id="marker-container-lattre" data-family="lattre">
+                        <div class="marker-container" id="marker-container-avenue-de-lattre-de-tassigny" data-family="avenue-de-lattre-de-tassigny">
                             <img src="../images/marker.webp" alt="Marker Avneue De Lattre-de-Tassigny" class="marker">
                         </div>
-                        <div class="marker-container" id="marker-container-leclerc" data-family="leclerc">
+                        <div class="marker-container" id="marker-container-avenue-du-general-leclerc" data-family="avenue-du-general-leclerc">
                             <img src="../images/marker.webp" alt="Marker Avenue du Général-Leclerc" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-square-emilie-tillion" data-family="square-emilie-tillion">
@@ -42,13 +42,13 @@
                         </div>
                     </div>
                     
-                    <div class="famille-info" id="info-lattre">
+                    <div class="famille-info" id="info-avenue-de-lattre-de-tassigny">
                         <h3>l'avenue De Lattre-de-Tassigny</h3>
                         <img src="images/eglise.webp" alt="Eglise de la Varenne" class="famille-img">
                         <p>Découvrez l'avenue De Lattre-de-Tassigny</p>
                         <a href="../rues/avenue-de-lattre-de-tassigny.html" class="btn-decouvrir">Découvrez l'avenue De Lattre-de-Tassigny</a>
                     </div>
-                    <div class="famille-info" id="info-leclerc">
+                    <div class="famille-info" id="info-avenue-du-general-leclerc">
                         <h3>l'Avenue du Général-Leclerc</h3>
                         <img src="images/le-parc.webp" alt="Avenue du Général-Leclerc" class="famille-img">
                         <p>Découvrez l'Avenue du Général-Leclerc</p>
