--- a/quartier/saint-maur-creteil.html
+++ b/quartier/saint-maur-creteil.html
@@ -22,7 +22,7 @@
                 <div class="carte-outer-container">
                     <div class="carte-container">
                         <img src="../images/smc.webp" alt="carte de Saint-Maur Créteil" class="carte-img">
-                        <div class="marker-container" id="marker-container-resistance" data-family="resistance">
+                        <div class="marker-container" id="marker-container-place-de-la-resistance" data-family="place-de-la-resistance">
                             <img src="../images/marker.webp" alt="Marker Place de la Résistance" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-rue-andre-bollier" data-family="rue-andre-bollier">
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     
-                    <div class="famille-info" id="info-resistance">
+                    <div class="famille-info" id="info-place-de-la-resistance">
                         <h3>La place de la  Résistance</h3>
                         <img src="images/eglise.webp" alt="Place de la Résistance" class="famille-img">
                         <p>Découvrez la place de la Résistance</p>
