--- a/quartier/vieux-saint-maur.html
+++ b/quartier/vieux-saint-maur.html
@@ -22,15 +22,18 @@
                 <div class="carte-outer-container">
                     <div class="carte-container">
                         <img src="../images/vieuxsm.webp" alt="carte du vieux saint maur" class="carte-img">
-                        <div class="marker-container" id="marker-container-liberation" data-family="liberation">
+                        <div class="marker-container" id="marker-container-avenue-de-la-liberation" data-family="avenue-de-la-liberation">
                             <img src="../images/marker.webp" alt="Marker Avenue de la Libération" class="marker">
                         </div>
                         <div class="marker-container" id="marker-container-avenue-gabriel-peri" data-family="avenue-gabriel-peri">
                             <img src="../images/marker.webp" alt="Marker Avenue Gabriel Péri" class="marker">
                         </div>
+                        <div class="marker-container" id="marker-container-square-victor-basch" data-family="square-victor-basch">
+                            <img src="../images/marker.webp" alt="Marker Square Victor-Basch" class="marker">
+                        </div>
                     </div>
                     
-                    <div class="famille-info" id="info-liberation">
+                    <div class="famille-info" id="info-avenue-de-la-liberation">
                         <h3>Avenue de la Libération</h3>
                         <img src="images/eglise.webp" alt="Avenue de la Libération" class="famille-info-img">
                         <p>Découvrez l'avenue de la Libération</p>
@@ -41,6 +44,12 @@
                         <img src="images/eglise.webp" alt="Avenue Gabriel Péri" class="famille-info-img">
                         <p>Découvrez l'Avenue Gabriel Péri</p>
                         <a href="../rues/avenue-gabriel-peri.html" class="btn-decouvrir">Découvrez l'Avenue Gabriel Péri</a>
+                    </div>
+                    <div class="famille-info" id="info-square-victor-basch">
+                        <h3>Square Victor-Basch</h3>
+                        <img src="images/eglise.webp" alt="Avenue Gabriel Péri" class="famille-info-img">
+                        <p>Découvrez le Square Victor-Basch</p>
+                        <a href="../rues/square-victor-basch.html" class="btn-decouvrir">Découvrez le Square Victor-Basch</a>
                     </div>
                 </div>
             </div>
