--- a/rues/square-victor-basch.html
+++ b/rues/square-victor-basch.html
@@ -10,20 +10,20 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <meta name="description" content="Découvrer la carte de Saint-Maur">
-        <title>la Rue Politzer</title>
+        <title>le Square Victor-Basch</title>
     </head>
 
 
     <body>
         <main>
-            <a href="../quartier/saint-maur-creteil.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
+            <a href="../quartier/vieux-saint-maur.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
-                    <h3>la Rue Politzer</h3>
+                    <h3>Le Square Victor-Basch</h3>
                     <p>.............................................................................................................................................................................................................</p>
                 </div>
                 <div class="grid-2-img scroll">
-                    <img src="images/image.jpg" alt="Rue Politzer">
+                    <img src="images/image.jpg" alt="Square Victor-Basch">
                 </div>
             </section>
         </main>
