--- a/rues/quai-winston-churchill.html
+++ b/rues/quai-winston-churchill.html
@@ -16,7 +16,7 @@
 
     <body>
         <main>
-            <a href="../quartier/lavarenne.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
+            <a href="../quartier/la-varenne.html" class="btn-retour" id="btn-retour-accueil">Retour à la carte</a>
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>le Quai Winston Churchill</h3>
