--- a/quartier/la-pie.html
+++ b/quartier/la-pie.html
@@ -35,19 +35,19 @@
                     
                     <div class="famille-info" id="info-rue-bayon">
                         <h3>La rue Bayon</h3>
-                        <img src="images/eglise.webp" alt="Rue Bayon" class="famille-img">
+                        <img src="../images/bayon.webp" alt="Rue Bayon" class="famille-img">
                         <p>Découvrez la rue Bayon</p>
                         <a href="../rues/rue-bayon.html" class="btn-decouvrir">Découvrez la rue Bayon</a>
                     </div>
                     <div class="famille-info" id="info-boulevard-du-general-giraud">
                         <h3>Le Boulevard du Général-Giraud </h3>
-                        <img src="images/eglise.webp" alt="Boulevard du Général-Giraud" class="famille-img">
+                        <img src="../images/giraud.webp" alt="Boulevard du Général-Giraud" class="famille-img">
                         <p>Découvrez le Boulevard du Général-Giraud </p>
                         <a href="../rues/boulevard-du-general-giraud.html" class="btn-decouvrir">Découvrez le Boulevard du Général-Giraud </a>
                     </div>
                     <div class="famille-info" id="info-square-et-avenue-darromanches">
                         <h3>Le Square et l'Avenue d'Arromanches </h3>
-                        <img src="images/eglise.webp" alt="Square et Avenue d'Arromanches" class="famille-img">
+                        <img src="../images/arromanches.webp" alt="Square et Avenue d'Arromanches" class="famille-img">
                         <p>Découvrez le Square et l'Avenue d'Arromanches </p>
                         <a href="../rues/square-et-avenue-darromanches.html" class="btn-decouvrir">Découvrez le Square et l'Avenue d'Arromanches </a>
                     </div>
