--- a/quartier/adamville.html
+++ b/quartier/adamville.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="famille-info" id="info-place-du-marechal-juin">
                         <h3>la Place du Maréchal-Juin</h3>
-                        <img src="images/le-parc.webp" alt="Place du Maréchal-Juin" class="famille-img">
+                        <img src="../images/juin.webp" alt="Place du Maréchal-Juin" class="famille-img">
                         <p>Découvrez la Place du Maréchal-Juin</p>
                         <a href="../rues/place-du-marechal-juin.html" class="btn-decouvrir">Découvrez la Place du Maréchal-Juin</a>
                     </div>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="famille-info" id="info-carrefour-du-huit-mai-1945">
                         <h3>Le Carrefour du Huit-Mai 1945</h3>
-                        <img src="images/le-parc.webp" alt="Carrefour du Huit-Mai 1945" class="famille-img">
+                        <img src="../images/huit-mai.webp" alt="Carrefour du Huit-Mai 1945" class="famille-img">
                         <p>Découvrez le Carrefour du Huit-Mai 1945</p>
                         <a href="../rues/carrefour-du-huit-mai-1945.html" class="btn-decouvrir">Découvrez le Carrefour du Huit-Mai 1945</a>
                     </div>
@@ -74,7 +74,7 @@
                     </div>
                     <div class="famille-info" id="info-rue-de-metz">
                         <h3>la Rue de Metz</h3>
-                        <img src="images/rue-de-metz.webp" alt="la Rue de Metz" class="famille-img">
+                        <img src="../images/metz.webp" alt="la Rue de Metz" class="famille-img">
                         <p>Découvrez la Rue de Metz</p>
                         <a href="../rues/rue-de-metz.html" class="btn-decouvrir">Découvrez la Rue de Metz</a>
                     </div>
