--- a/quartier/le-parc-saint-maur.html
+++ b/quartier/le-parc-saint-maur.html
@@ -44,13 +44,13 @@
                     
                     <div class="famille-info" id="info-avenue-de-lattre-de-tassigny">
                         <h3>l'avenue De Lattre-de-Tassigny</h3>
-                        <img src="images/eglise.webp" alt="Eglise de la Varenne" class="famille-img">
+                        <img src="../images/tassigny.webp" alt="l'avenue De Lattre-de-Tassigny" class="famille-img">
                         <p>Découvrez l'avenue De Lattre-de-Tassigny</p>
                         <a href="../rues/avenue-de-lattre-de-tassigny.html" class="btn-decouvrir">Découvrez l'avenue De Lattre-de-Tassigny</a>
                     </div>
                     <div class="famille-info" id="info-avenue-du-general-leclerc">
                         <h3>l'Avenue du Général-Leclerc</h3>
-                        <img src="images/le-parc.webp" alt="Avenue du Général-Leclerc" class="famille-img">
+                        <img src="../images/leclerc.webp" alt="Avenue du Général-Leclerc" class="famille-img">
                         <p>Découvrez l'Avenue du Général-Leclerc</p>
                         <a href="../rues/avenue-du-general-leclerc.html" class="btn-decouvrir">Découvrez l'Avenue du Général-Leclerc</a>
                     </div>
@@ -62,20 +62,20 @@
                     </div>
                     <div class="famille-info" id="info-avenue-des-fusilles-de-chateaubriant">
                         <h3>l'Avenue des Fusillés de Châteaubriant</h3>
-                        <img src="images/le-parc.webp" alt="Avenue des Fusillés de Châteaubriant" class="famille-img">
+                        <img src="../images/chateaubriant.webp" alt="Avenue des Fusillés de Châteaubriant" class="famille-img">
                         <p>Découvrez l'Avenue des Fusillés de Châteaubriant</p>
                         <a href="../rues/avenue-des-fusilles-de-chateaubriant.html" class="btn-decouvrir">Découvrez l'Avenue des Fusillés de Châteaubriant</a>
                     </div>
                     <div class="famille-info" id="info-avenue-leopold-sedar-senghor">
                         <h3>l'Avenue Léopold-Sédar-Senghor</h3>
-                        <img src="images/le-parc.webp" alt="Avenue Léopold-Sédar-Senghor" class="famille-img">
+                        <img src="../images/senghor.webp" alt="Avenue Léopold-Sédar-Senghor" class="famille-img">
                         <p>Découvrez l'Avenue Léopold-Sédar-Senghor</p>
                         <a href="../rues/avenue-leopold-sedar-senghor.html" class="btn-decouvrir">Découvrez l'Avenue Léopold-Sédar-Senghor</a>
                     </div>
                     <div class="famille-info" id="info-avenue-pierre-brossolette">
                         <h3>l'Avenue Pierre-Brossolette</h3>
-                        <img src="images/le-parc.webp" alt="Avenue Pierre-Brossolette" class="famille-img">
-                        <p>Découvrez l'Avenue Pierre-Brossolette'</p>
+                        <img src="../images/brosselette.webp" alt="Avenue Pierre-Brossolette" class="famille-img">
+                        <p>Découvrez l'Avenue Pierre-Brossolette</p>
                         <a href="../rues/avenue-pierre-brossolette.html" class="btn-decouvrir">Découvrez l'Avenue Pierre-Brossolette</a>
                     </div>
                 </div>
