--- a/rues/avenue-de-la-liberation.html
+++ b/rues/avenue-de-la-liberation.html
@@ -20,7 +20,7 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>L'Avenue de la Libération</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>En 1947, la rue du Petit-Parc a été baptisée avenue de la Libération en souvenir des combats meurtriers opposant les membres du bataillon HOCHE et les occupants allemands pour la Libération de Saint-Maur-des-Fossés en août 1944.</p>
                 </div>
                 <div class="grid-2-img scroll">
                     <img src="images/image.jpg" alt="Avenue de la Libération">
