--- a/quartier/vieux-saint-maur.html
+++ b/quartier/vieux-saint-maur.html
@@ -35,19 +35,19 @@
                     
                     <div class="famille-info" id="info-avenue-de-la-liberation">
                         <h3>Avenue de la Libération</h3>
-                        <img src="images/eglise.webp" alt="Avenue de la Libération" class="famille-info-img">
+                        <img src="images/eglise.webp" alt="Avenue de la Libération" class="famille-img">
                         <p>Découvrez l'avenue de la Libération</p>
                         <a href="../rues/avenue-de-la-liberation.html" class="btn-decouvrir">Découvrez l'avenue de la Libération</a>
                     </div>
                     <div class="famille-info" id="info-avenue-gabriel-peri">
                         <h3>Avenue Gabriel Péri</h3>
-                        <img src="images/eglise.webp" alt="Avenue Gabriel Péri" class="famille-info-img">
+                        <img src="../images/peri.webp" alt="Avenue Gabriel Péri" class="famille-img">
                         <p>Découvrez l'Avenue Gabriel Péri</p>
                         <a href="../rues/avenue-gabriel-peri.html" class="btn-decouvrir">Découvrez l'Avenue Gabriel Péri</a>
                     </div>
                     <div class="famille-info" id="info-square-victor-basch">
                         <h3>Square Victor-Basch</h3>
-                        <img src="images/eglise.webp" alt="Avenue Gabriel Péri" class="famille-info-img">
+                        <img src="../images/basch.webp" alt="Square Victor-Basch" class="famille-img">
                         <p>Découvrez le Square Victor-Basch</p>
                         <a href="../rues/square-victor-basch.html" class="btn-decouvrir">Découvrez le Square Victor-Basch</a>
                     </div>
