--- a/rues/rue-de-birhakeim.html
+++ b/rues/rue-de-birhakeim.html
@@ -20,7 +20,7 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>La Rue de Bir-Hakeim</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>La bataille de Bir-Hakeim rappelle le combat acharné de la Résistance. La 1re Brigade française Libre composée de 3 700 hommes impose d’importantes pertes aux 37 000 soldats des Deutsches Afrikakorps et Corpo d’armata. On compte par exemple 170 morts pour la BFL contre 3 300 blessés, tués ou disparus pour les forces nazies.</p>
                 </div>
                 <div class="grid-2-img scroll">
                     <img src="images/image.jpg" alt="Rue de Bir-Hakeim">
