--- a/quartier/le-parc-saint-maur.html
+++ b/quartier/le-parc-saint-maur.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="famille-info" id="info-avenue-pierre-brossolette">
                         <h3>l'Avenue Pierre-Brossolette</h3>
-                        <img src="../images/brosselette.webp" alt="Avenue Pierre-Brossolette" class="famille-img">
+                        <img src="../images/brossolette.webp" alt="Avenue Pierre-Brossolette" class="famille-img">
                         <p>Découvrez l'Avenue Pierre-Brossolette</p>
                         <a href="../rues/avenue-pierre-brossolette.html" class="btn-decouvrir">Découvrez l'Avenue Pierre-Brossolette</a>
                     </div>
