--- a/rues/avenue-gabriel-peri.html
+++ b/rues/avenue-gabriel-peri.html
@@ -20,7 +20,7 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>L'Avenue Gabriel Péri </h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>En 1944, on débaptisa un certain nombre de rues de ce quartier afin de regrouper là le souvenir des héros de la Résistance. Gabriel Péri, député et  journaliste à L'Humanité, fut arrêté comme résistant par la police française et fusillé comme otage par les Allemands au Mont Valérien.</p>
                 </div>
                 <div class="grid-2-img scroll">
                     <img src="images/image.jpg" alt="Avenue Gabriel Péri ">
