--- a/rues/avenue-de-lattre-de-tassigny.html
+++ b/rues/avenue-de-lattre-de-tassigny.html
@@ -20,7 +20,10 @@
             <section class="grid-2">
                 <div class="grid-2-desc scroll">
                     <h3>l'Avenue De Lattre-de-Tassigny</h3>
-                    <p>.............................................................................................................................................................................................................</p>
+                    <p>L’avenue Charles Floquet prend le nom de De Lattre de Tassigny en 1952, l’année de sa mort. Ce maréchal de France fut fait prisonnier par le gouvernement de Vichy à la suite du débarquement des Alliés en Afrique du Nord durant lequel il était Commandant de la 16e division à Montpellier. Il s'évada et commanda la Première armée française en 1944-1945. Il fut ensuite commandant en chef en Indochine. </p>
+                    <p>Sous le régime de Vichy, il reste dans l'Armée d'armistice, où il occupe des postes de commandement à l'échelon régional, puis comme commandant en chef des troupes en Tunisie. Commandant de la 16e division militaire à Montpellier le 11 novembre 1942, lorsque la zone libre est envahie par les troupes allemandes, à la suite du débarquement des Alliés en Afrique du Nord, il est arrêté et condamné à dix ans de prison, pour avoir désobéi au gouvernement, et, seul général en activité à le faire, ordonné à ses troupes de s'opposer aux Allemands. Il parvient à s'évader et rallie le CFLN à Alger, fin 1943.</p>
+                    <p>Après son ralliement à de Gaulle, il est l'un des grands chefs de l'Armée de Libération entre 1943 et 1945, s'illustrant à la tête de la 1re armée, qui, après le débarquement de Provence du 15 août 1944, mène la campagne victorieuse, dite « Rhin et Danube», contre le Troisième Reich. Il est le seul général français de la Seconde Guerre mondiale à avoir commandé de grandes unités américaines.</p>
+                    <p>Il est le représentant français à la signature de la capitulation allemande à Berlin, le 8 mai 1945, aux côtés d'Eisenhower, Joukov et Montgomery.</p>
                 </div>
                 <div class="grid-2-img scroll">
                     <img src="images/image.jpg" alt="Avenue De Lattre-de-Tassigny">
